--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Tienda De Articulos Deportivos </h1>
+    <h1>LOGIN</h1>
         <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-                <script src="index.js"></script>
-            </ul>
+            <label> 
+                <i class="fa-solid fa-user"></i>
+                <input type="text"> id="username"
+
+            </label>
+            <label> 
+                <i class="fa-solid fa-lock"></i>
+                <input type="password"> id="password"
+                <a href="#" class="link">Forgot your password?</a>
+
+                <button id="button">LOGIN</button>
+         
+            
         </nav>
     </header>
 
