--- a/index.html
+++ b/index.html
@@ -1,89 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión y registro</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio de sesión y registro</title>
 
-    <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="./index.js"></script>
-
-    <script type="text/javascript">
-
-      window.onload = function mostrarProductosPrincipales(){
-  var lstProductos = [
-    {nombre:"Sudaderas", imagen:"imagenes/banner/buso_1.png"},
-    {nombre:"Gorras", imagen:"imagenes/banner/gorra_1.png"},
-    {nombre:"Leggins", imagen:"imagenes/banner/pantalon_1.png"},
-    {nombre:"Zapatillas", imagen:"imagenes/banner/zapato_1.png"}
-];
-
-lstProductos.forEach(function(articulo){
-  //var titulos = document.getElementById("titulos");
-  var contededor = document.createElement('slider-faceta');
-
-
-  var image = document.getElementById("img");  
-  //var contededor2 = document.getElementById('slider-faceta');
-  image.src =  articulo.imagen;   
-  //image.innerText = articulo.nombre
-  //titulos.innerHTML = articulo.nombre
-  image.innerHTML = `<h3>${articulo.nombre}</h3>`;
-
-
-  contededor.appendChild(image);
-  //document.getElementById("titulos").appendChild(contenedor)
-});
-}
-</script>      
-
+  <link rel="stylesheet" href="index.css">
+  <script type="text/javascript" src="./index.js"></script>
 </head>
+
 <body>
 
-  <div class="jsx-1250940326 pad-group--category-banner container">
-     <div id="testId-categoryBanner" class="jsx-349732077 header-static-content">
-      <div class="jsx-349732077">
-        <div class="uxc-huincha-container">
-          <div id="slider-faceta">
+  <h1>Iniciar Sesión</h1>
 
-            <div class="uxc-huincha-item uxc-huincha-circle uxc-huincha-circle-opacity9 uxc-huincha-circle-fondo img-big"><!--desde aqui entra en el ciclo-->
-              <img id="img"/>
-              <h3 id="titulos"></h3>
-            </div>
+  <div class="container" id="login-form">
+    <nav>
+      <label>
+        <i class="fa-solid fa-user"></i>
+        <input id="username" placeholder="username" type="text">
 
-            <div class="uxc-huincha-item uxc-huincha-circle uxc-huincha-circle-opacity9 uxc-huincha-circle-fondo img-big"><!--desde aqui entra en el ciclo-->
-                <img id="img"/>
-                <h3 id="titulos"></h3>
-            </div>
+      </label>
+      <label>
+        <i class="fa-solid fa-lock"></i>
+        <input placeholder="password" type="password">
 
-            <div class="uxc-huincha-item uxc-huincha-circle uxc-huincha-circle-opacity9 uxc-huincha-circle-fondo img-big"><!--desde aqui entra en el ciclo-->
-                <img id="img"/>
-                <h3 id="titulos"></h3>
-            </div>
+        <button onclick="login()">login</button>
 
-            <div class="uxc-huincha-item uxc-huincha-circle uxc-huincha-circle-opacity9 uxc-huincha-circle-fondo img-big"><!--desde aqui entra en el ciclo-->
-                <img id="img"/>
-                <h3 id="titulos"></h3>
-            </div>
-            
+        <!-- .proceso de registro ... -->
 
-
-
-
-          </div>
-
-
-
+        <div class="container" id="register-form" style="display: none;">
+          <h1>Registro de usuario</h1>
+          <label>
+            <i class="fa-solid fa-user"></i>
+            <input placeholder="username" type="text">
+          </label>
+          <label>
+            <i class="fa-solid fa-lock"></i>
+            <input placeholder="password" type="password">
+          </label>
+          <button id="register-button">Registrar</button>
         </div>
-      </div>
-     </div>
+
+        <p>No tienes cuenta? <a href="#" id="show-register">Regístrate aquí</a></p>
+        <a href="#" class="link">Forgot your password?</a>
+
   </div>
 
-  <div id="miDiv" ></div>
+  <div class="banner container">
+    <a href="#divBusos" onclick="mostrarTodos()">
+      <h3>Ver todos los productos</h3>
+    </a>
+    <div class="header-content">
+      <div class="color-container">
+        <div id="slider" class="slider">
 
-  <!--<img id="img" style="width: 30% !important; height: 30% !important;"/>-->
+          <div>
+            <a href="#divBusos" onclick="mostrarBusos()">
+              <img id="img" src="imagenes/banner/buso_1.png" />
+              <h3 id="titulos">Busos</h3>
+            </a>
+          </div>
 
-    
-  
+          <div>
+            <a href="#divGorra" onclick="mostrarGorras()">
+              <img id="img" src="imagenes/banner/gorra_1.png" />
+              <h3 id="titulos">Gorras</h3>
+            </a>
+          </div>
+
+          <div>
+            <a href="#divPantalon" onclick="mostrarPantalon()">
+              <img id="img" src="imagenes/banner/pantalon_1.png" />
+              <h3 id="titulos">Pantalones</h3>
+            </a>
+          </div>
+
+          <div>
+            <a href="#divZapato" onclick="mostrarZapato()">
+              <img id="img" src="imagenes/banner/zapato_1.png" />
+              <h3 id="titulos">Zapatos</h3>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <pre></pre>
+  <pre></pre>
+
+  <div id="divBusos" class="color-container secundario" style="display: none;">
+
+
+    <div>
+      <img id="img" src="imagenes/busos/buso_1.png"></img>
+      <h4>Pilatos</h4>
+      <p>Buso en lana color gris</p>
+      <h3>$95.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/busos/buso_2.png"></img>
+      <h4>Diesel</h4>
+      <p>Buso cerrado para hombre</p>
+      <h3>$105.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/busos/buso_3.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Buso cerrado para mujer</p>
+      <h3>$75.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/busos/buso_4.png"></img>
+      <h4>Superdry</h4>
+      <p>Chaqueta en lana para hacer deporte unisex</p>
+      <h3>$87.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/busos/buso_5.png"></img>
+      <h4>Monastery</h4>
+      <p>Buso para hombre</p>
+      <h3>$60.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+  </div>
+
+  <pre></pre>
+  <pre></pre>
+
+  <div id="divGorra" class="color-container secundario" style="display: none;">
+
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_1.png"></img>
+      <h4>Monastery</h4>
+      <p>Gorra para hombre</p>
+      <h3>$30.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_2.png"></img>
+      <h4>Superdry</h4>
+      <p>Gorra unisex</p>
+      <h3>$40.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_3.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Gorra unisex</p>
+      <h3>$40.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_4.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Gorra vintage unisex</p>
+      <h3>$53.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_5.png"></img>
+      <h4>Superdry</h4>
+      <p>Gorra unisex</p>
+      <h3>$40.500</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_6.png"></img>
+      <h4>Superdry</h4>
+      <p>Gorra vintage unisex</p>
+      <h3>$50.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_7.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Gorra tipo beisbol unisex</p>
+      <h3>$34.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/gorras/gorra_8.png"></img>
+      <h4>Superdry</h4>
+      <p>Gorra unisex</p>
+      <h3>$38.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+  </div>
+
+  <pre></pre>
+  <pre></pre>
+
+  <div id="divPantalon" class="color-container secundario" style="display: none;">
+
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_1.png"></img>
+      <h4>Superdry</h4>
+      <p>Sport Leggins Mujer - Color Vinotinto</p>
+      <h3>$40.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_2.png"></img>
+      <h4>Superdry</h4>
+      <p>Sport Leggins Mujer - Color Fucsia</p>
+      <h3>$40.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_3.png"></img>
+      <h4>Superdry</h4>
+      <p>Sport Leggins Mujer - Color Rojo</p>
+      <h3>$40.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_4.png"></img>
+      <h4>Superdry</h4>
+      <p>Sport Leggins Mujer - Color Azul</p>
+      <h3>$40.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_5.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Sudadera Mujer - Color Negro</p>
+      <h3>$30.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_6.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Pantalon tipo pescador Mujer - Color violeta claro</p>
+      <h3>$32.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_8.png"></img>
+      <h4>Marithe Francois Girbaud</h4>
+      <p>Short Mujer - Color gris oscuro</p>
+      <h3>$45.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_9.png"></img>
+      <h4>Superdry</h4>
+      <p>Sudadera Mujer tipo pescador - Color negro</p>
+      <h3>$50.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/pantalon/pantalon_10.png"></img>
+      <h4>Superdry</h4>
+      <p>Pantalón Mujer - Color negro</p>
+      <h3>$60.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+
+  </div>
+
+  <pre></pre>
+  <pre></pre>
+
+  <div id="divZapato" class="color-container secundario" style="display: none;">
+
+
+    <div>
+      <img id="img" src="imagenes/zapatos/zapato_1.png"></img>
+      <h4>Lacoste</h4>
+      <p>Zapatillas Unisex - Talla 37 - 45</p>
+      <h3>$540.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/zapatos/zapato_2.png"></img>
+      <h4>Diesel</h4>
+      <p>Zapatillas Hombre - Talla 37 - 45</p>
+      <h3>$620.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/zapatos/zapato_3.png"></img>
+      <h4>Vans</h4>
+      <p>Zapatillas Hombre - Talla 37 - 43</p>
+      <h3>$220.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/zapatos/zapato_4.png"></img>
+      <h4>Lacoste</h4>
+      <p>Zapatillas Unisex - Talla 37 - 45</p>
+      <h3>$320.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+    <div>
+      <img id="img" src="imagenes/zapatos/zapato_5.png"></img>
+      <h4>Lacoste</h4>
+      <p>Zapatillas Mujer - Talla 37 - 40</p>
+      <h3>$250.000</h3>
+      <img id="img" src="imagenes/carro.png" style="width: 35px !important;"></img>
+    </div>
+
+  </div>
+
+  <script src="index.js"></script>
+
+  <button onclick="cambiarColorFondo()">Cambiar color del fondo</button>
+  <footer>
+    <p>&copy; 2023 Mi Empresa. Todos los derechos reservados.</p>
+  </footer>
+
+
 </body>
+
 </html>
