--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div id="myModal" class="modal">
+    <div class="modal-contente " >
+    <span class ="close">&times;</span>
+    <div class="container" id="login-form">
+      <nav>
+          <label> 
+              <i class="fa-solid fa-user"></i>
+              <input id="username" placeholder="username" type="text">
+  
+          </label>
+          <label> 
+              <i class="fa-solid fa-lock"></i>
+              <input placeholder="password" type="password"> 
+  
+              <button onclick="login()">login</button>
+            </div>
+          </div>
+        </div> 
+         
   <nav class="menu">
     <section class="menu__container">
       <h1 class="menu__logo">Tienda Deportiva</h1>
@@ -19,7 +38,7 @@
           <a href="#" class="menu__link">Inicio</a>
         </li>
         <li class="menu__item">
-          <a href="#" class="menu__link">Perfil</a>
+          <a href="#" class="menu__link"onclick="abrirModal()">Perfil</a>
         </li>
         <li class="menu__item menu__item--show">
           <a href="#" class="menu__link">Articulos <img src="imagenes/arroww.svg" class="menu__arrow"> </a>
@@ -52,86 +71,13 @@
       </ul>
       <div class="menu__hamburguer">
         <img src="imagenes/menuu.svg" class="menu__img">
+        
     </div>
     </section>
   </nav>
-  <script src="index.js"></script>
-</body>
-
-<!-- Inicio de sesion -->
-<html>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Inicio de sesión y registro</title>
-
-<link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-
-
-  <h1>Iniciar Sesión</h1>
-
-  <div class="container" id="login-form">
-    <nav>
-      <label>
-        <i class="fa-solid fa-user"></i>
-        <input id="username" placeholder="username" type="text">
-
-      </label>
-      <label>
-        <i class="fa-solid fa-lock"></i>
-        <input placeholder="password" type="password">
-
-
-
-
-
-        <button onclick="login()">login</button>
-
-        <!-- .proceso de registro ... -->
-
-        <div class="container" id="register-form" style="display: none;">
-          <h1>Registro de usuario</h1>
-          <label>
-            <i class="fa-solid fa-user"></i>
-            <input placeholder="username" type="text">
-          </label>
-          <label>
-            <i class="fa-solid fa-lock"></i>
-            <input placeholder="password" type="password">
-          </label>
-          <button id="register-button">Registrar</button>
-        </div>
-
-
-
-
-        <p>No tienes cuenta? <a href="#" id="show-register">Regístrate aquí</a></p>
-        <a href="#" class="link">Forgot your password?</a>
-
-
-  </div>
-
-
-  </header>
-
-  <main>
-
-    <section id="servicios">
-      <h2>Tienda De Articulos Deportivos</h2>
-      <!-- Imágenes con margen -->
-      <img src="imagenes/imagen 2.jpg.jpg" alt="">
-
-
-  </main>
-  <script src="index.js"></script>
-
   <button onclick="cambiarColorFondo()">Cambiar color del fondo</button>
-  <footer>
-    <p>&copy; 2023 Mi Empresa. Todos los derechos reservados.</p>
-  </footer>
+ 
+  <script src="index.js"></script>
 </body>
 
 </html>
