Title botones modo oscuro y modo claro

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       </nav>
          
   <nav id="menu" class="menu">
-    <button id="btnClaro" type="button" class="btnAspecto" onclick="fondoOscuro()">
+    <button id="btnClaro" type="button" class="btnAspecto" onclick="fondoOscuro()"
+    title="Modo Claro">
       <input id="imgSol" type="image" src="imagenes/sol.png"/> 
      </button>
 
-     <button id="btnOscuro" type="button" class="btnAspecto" onclick="fondoClaro()" >
+     <button id="btnOscuro" type="button" class="btnAspecto" onclick="fondoClaro()" 
+     title="Modo Oscuro">
       <input id="imgLuna" type="image" src="imagenes/luna.png"/>     
      </button>
   
