--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
           <a href="#" class="menu__link">Compras <img src="imagenes/arroww.svg" class="menu__arrow"> </a>
           <ul class="menu__nesting">
             <li class="menu__inside">
+              <a href="#" class="menu__link menu__link--inside">Pagos</a>
+            </li>
+            <li class="menu__inside">
               <a href="#" class="menu__link menu__link--inside">Estado de compra</a>
             </li>
           </ul>
